# implicit-octree-nns

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
VisualizeImplicitOctree/: Manifest.toml  Project.toml
VisualizeImplicitOctree/distribution_out/: .gitattributes
VisualizeImplicitOctree/src/: AnalysisPlotting.jl  BenchmarkPlotting.jl  EquationHull.jl  GeometryPlotter.jl  OctvisParser.jl  ParseUtils.jl  Runner.jl  VisualizeImplicitOctree.jl
VisualizeImplicitOctree/starred/: .gitattributes  visualize_normal_distribution.octvis  visualize_poisson_distribution.octvis  visualize_uniform_distribution.octvis
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst  model_point.rst  nearest_neighbor.rst  point_traits.rst
include/implicit_octree_nns/: hash_table_traits.hpp  model_hash_table.hpp  model_point.hpp  nearest_neighbor.hpp  point_traits.hpp
include/implicit_octree_nns/detail/: axis_aligned.hpp  bounding_box.hpp  cgal_voronoi.hpp  equation.hpp  equation_hull.hpp  experiment_setup.hpp  kd_tree.hpp  naive_nearest_neighbor.hpp  nearest_neighbor_impl.hpp  octree_cell.hpp  utility.hpp
include/implicit_octree_nns/visualize/: drawing.hpp  visualize_flag.hpp
scripts/cmake/: SetProjectCompileOptions.cmake
src/: experiment.cpp  experiment_distribution.cpp  nearest_neighbor.cpp  nearest_neighbor_benchmarks.cpp
tests/: CMakeLists.txt  construct_model_hash.cpp  construct_nearest_neighbor.cpp  construct_point.cpp  test_axis_aligned_2.cpp  test_bounding_box.cpp  test_equation_2.cpp  test_equation_hull.cpp  test_kd_tree.cpp  test_nearest_neighbor_locate.cpp  test_octree_cell.cpp
